--- a/docker-compose-peer.yaml
+++ b/docker-compose-peer.yaml
@@ -9,7 +9,7 @@ services:
       - CORE_PEER_ADDRESS=peer1-org1:7051
       - CORE_PEER_LOCALMSPID=org1MSP
       - CORE_PEER_MSPCONFIGPATH=/org1/peer1/msp
-      - CORE_VM_ENDPOINT=unix://host/var/run/docker.sock
+      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=guide_fabric-ca
       - FABRIC_LOGGING_SPEC=debug
       - CORE_PEER_TLS_ENABLED=true
@@ -32,7 +32,7 @@ services:
       - CORE_PEER_ADDRESS=peer2-org1:7051
       - CORE_PEER_LOCALMSPID=org1MSP
       - CORE_PEER_MSPCONFIGPATH=/org1/peer2/msp
-      - CORE_VM_ENDPOINT=unix://host/var/run/docker.sock
+      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=guide_fabric-ca
       - FABRIC_LOGGING_SPEC=debug
       - CORE_PEER_TLS_ENABLED=true
@@ -56,7 +56,7 @@ services:
       - CORE_PEER_ADDRESS=peer1-org2:7051
       - CORE_PEER_LOCALMSPID=org2MSP
       - CORE_PEER_MSPCONFIGPATH=/org2/peer1/msp
-      - CORE_VM_ENDPOINT=unix://host/var/run/docker.sock
+      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=guide_fabric-ca
       - FABRIC_LOGGING_SPEC=debug
       - CORE_PEER_TLS_ENABLED=true
@@ -79,7 +79,7 @@ services:
       - CORE_PEER_ADDRESS=peer2-org2:7051
       - CORE_PEER_LOCALMSPID=org2MSP
       - CORE_PEER_MSPCONFIGPATH=/org2/peer2/msp
-      - CORE_VM_ENDPOINT=unix://host/var/run/docker.sock
+      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=guide_fabric-ca
       - FABRIC_LOGGING_SPEC=debug
       - CORE_PEER_TLS_ENABLED=true
