Installind and instantiating chaincode successfully

--- a/configtx.yaml
+++ b/configtx.yaml
@@ -210,7 +210,7 @@ Orderer: &OrdererDefaults
     # participation in ordering.
     # NOTE: In the solo case, this should be a one-item list.
     Addresses:
-        - orderer.myapp.com:7050
+        - orderer-org0:7050
 
     # Batch Timeout: The amount of time to wait before creating a batch.
     BatchTimeout: 2s
